RESOLVED FIXED152984
[B3][Win64] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=152984
Summary [B3][Win64] Compile error.
peavo
Reported 2016-01-11 12:41:25 PST
Windows does not have bzero, use memset instead.
Attachments
Patch (1.37 KB, patch)
2016-01-11 12:45 PST, peavo
achristensen: review+
peavo
Comment 1 2016-01-11 12:45:29 PST
peavo
Comment 2 2016-01-11 13:29:49 PST
Thanks for reviewing :)
peavo
Comment 3 2016-01-11 13:31:14 PST
Note You need to log in before you can comment on or make changes to this bug.