[B3][Win64] Compile error. https://bugs.webkit.org/show_bug.cgi?id=152984

Reviewed by Alex Christensen.

Windows does not have bzero, use memset instead.

* b3/air/AirIteratedRegisterCoalescing.cpp:


Canonical link: https://commits.webkit.org/171068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194862 268f45cc-cd09-0410-ab3c-d52691b4dbfc