Source/JavaScriptCore/b3/air/AirIteratedRegisterCoalescing.cpp
@@ -247,7 +247,7 @@ private:
         for (unsigned i = 0; i < firstNonRegIndex; ++i)
             m_degrees[i] = std::numeric_limits<unsigned>::max();
 
-        bzero(m_degrees.data() + firstNonRegIndex, (tmpArraySize - firstNonRegIndex) * sizeof(unsigned));
+        memset(m_degrees.data() + firstNonRegIndex, 0, (tmpArraySize - firstNonRegIndex) * sizeof(unsigned));
     }
 
     void addEdgeDistinct(IndexType a, IndexType b)
